Fixed Alignment + Disabled Scrolling

--- a/loginstyle.css
+++ b/loginstyle.css
@@ -1,4 +1,5 @@
 body{
+    overflow: hidden;
     margin: 0;
     padding: 0;
     background-image: url(OdetteNight.png);
@@ -18,6 +19,7 @@ body{
     position: absolute;
     transform: translate(-50%, -50%);
     box-sizing: border-box;
+    padding: 40px 0px;
 }
 
 .loginbox p{
@@ -74,4 +76,5 @@ h1{
     padding: 0 0 20px;
     text-align: center;
     color: #0000FF;
+    margin-bottom: 2%;
 }
